// Copyright (c) Abstract Machines
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package auth.v1;
option go_package = "github.com/absmach/supermq/api/grpc/auth/v1";

// AuthService is a service that provides authentication
// and authorization functionalities for SuperMQ services.
service AuthService {
  rpc Authorize(AuthZReq) returns (AuthZRes) {}
  rpc Authenticate(AuthNReq) returns (AuthNRes) {}
}


message AuthNReq {
  string token = 1;
}

message AuthNRes {
  string id = 1;
  string user_id = 2;
  uint32 user_role = 3;
  bool verified = 4;
  uint32 token_type = 5;
}

message PolicyReq {
  uint32 token_type = 1;
  string domain = 2;
  string subject_type = 3;
  string subject_kind = 4;
  string subject_relation = 5;
  string subject = 6;
  string relation = 7;
  string permission = 8;
  string object = 9;
  string object_type = 10;
}

message PATReq {
  uint32 token_type = 1;
  string user_id = 2;
  string pat_id = 3;
  uint32 entity_type = 4;
  string domain_id = 5;
  uint32 operation = 6;
  string entity_id = 7;
}

message AuthZReq {
  oneof auth_type {
    PolicyReq policy = 1;
    PATReq pat = 2;
  }
}

message AuthZRes {
  bool authorized = 1;
  string id = 2;
}
